--- a/app/src/main/res/layout/hello_world.xml
+++ b/app/src/main/res/layout/hello_world.xml
@@ -5,31 +5,14 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:text="Name : "
+        android:src="@drawable/aku"
         />
 
-    <EditText
-        android:id="@+id/nameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:textColor="@color/black"
-        android:layout_margin="20dp"
-        android:padding="20dp"
-        />
-
-    <Button
-        android:id="@+id/sayBabyButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/white"
-        android:text="Say Baby"
-        />
+    <include layout="@layout/say_baby_form" />
 
     <TextView
         android:id="@+id/sayBabyTextView"
